# Mu-CLI

./: .dockerignore  .gitignore  Dockerfile  Makefile  Makefile.agents  README.md  ReadMe.md  TODO.md  design.md  docker-compose.yml  doco.html  impl_plan.md  mucli  mucli.py  mucli_server.py  mucli_tui.py  pyproject.toml  requirements.txt  start_gui.sh
agents/: ReadMe.md  requirements.txt
benchmarks/: README.md  __init__.py  __main__.py  cli.py  harness.py  recorder.py  report.py  rubrics.py  spec.py
cli/: README.md  mu_cli.py
core/: approval.py  background_tasks.py  collation.py  feature_mode.py  memory.py  retrieval.py  secret_paths.py  security_mode.py  server.py  server_client.py  session.py  subagents.py  tools.py  workspace.py
docs/: ARCHITECTURE.md  TESTING.md  UX_OVERHAUL_ROADMAP.md  frontend-revamp-plan.md
documentation/: commands.md  configuration.md  debug_mode.md  default_mode.md  feature_plan_engine.md  hooks.md  loop_mode.md  mcp.md  memory_guide.md  refactor_roadmap.md  research_mode.md  security.md  security_controls.md  security_mode.md  server_architecture_review.md  server_client_rearchitecture_plan.md  skills.md  subagent_orchestration_architecture.md  teacher_mode.md  tooling_harness_architecture.md  van_phase0_baseline_checklist.md  van_phase2_formal_pass.md  van_phase2_parity_walkthrough.md  van_phase2_screenshot_diff_baseline.md  vanjs_sse_cutover_plan.md
evals/: README.md  __init__.py  harness.py
gemini_interactive/: ReadMe.md  gemini_interactive  requirements.txt
gui/: README.md  app.js  bootstrap.js  index.html  launcher.py  (+3 more)
(+455 files in other folders)
